Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103001

Implicit conversion loses integer

XMLWordPrintable

    • iOS/tvOS/watchOS
    • 382881fed0 (qt/qtbase/6.3) 382881fed0 (qt/tqtc-qtbase/6.3) 7ec2153016 (qt/qtbase/dev) 7ec2153016 (qt/tqtc-qtbase/dev) 4bb883aaab (qt/qtbase/6.3) 4bb883aaab (qt/tqtc-qtbase/6.3) 21a5f21235 (qt/tqtc-qtbase/6.2) 4bb883aaab (qt/qtbase/6.3.1)

      See attached screenshot 

      All of this warnings got with this project https://github.com/ArboreusSystems/arboreus_examples/tree/master/qt5/UsingObjectiveC

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            bogong Alexandr KIRILOV
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: