Add a few explicit conversions back from int

Suppresses GCC's -Wconversion, which is not enabled by default.

error: conversion from ‘int’ to ‘quint8’ {aka ‘unsigned char’} may change value [-Werror=conversion]

Change-Id: I0e5f6bec596a4a78bd3bfffd16c998102bd51f7c
Fixes: QTBUG-103001
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 214df31916c53e46348173fc02fe53f2b9db729a)